--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav> <!-- Menu de links-->
         <ul>
             <li><a href="../Trabalho/index.html">Sobre mim</a></li>
-            <li><a href="../Trabalho/formacao.html">Formação</a></li>
-            <li><a href="../Trabalho/Portfolio.html">Portfólio</a></li>
-            <li><a href="../Trabalho/contato.html">Contato</a></li>
+            <li><a href="formacao.html">Formação</a></li>
+            <li><a href="Portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
     </nav>
     <!-- Titulo sobre mim e uma div com paragrafos sobre mim-->
     <h1>Sobre mim!</h1>
