--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       -->
     <nav> <!-- Menu de links-->
         <ul>
-            <li><a href="../Trabalho/index.html">Sobre mim</a></li>
+            <li><a href="index.html">Sobre mim</a></li>
             <li><a href="formacao.html">Formação</a></li>
             <li><a href="Portfolio.html">Portfólio</a></li>
             <li><a href="contato.html">Contato</a></li>
