--- a/formacao.html
+++ b/formacao.html
@@ -11,21 +11,21 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../Trabalho/index.html">Sobre mim</a></li>
-            <li><a href="../Trabalho/formacao.html">Formação</a></li>
-            <li><a href="../Trabalho/Portfolio.html">Portfólio</a></li>
-            <li><a href="../Trabalho/contato.html">Contato</a></li>
+            <li><a href="index.html">Sobre mim</a></li>
+            <li><a href="formacao.html">Formação</a></li>
+            <li><a href="Portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
     <!-- Divs e textos para exibir a minha formação-->
     <h1>Formação</h1>
     <div class="form1">
-        <img src="../IMG/fiec.png" width="145px" height="105px">
+        <img src="fiec.png" width="145px" height="105px">
         <p>Tenho curso técnico em informatica para internet na instituição <b>FIEC</b>.</p>
         <p>Aprendi a desenvolver sites basicos em <b>HTML, CSS e JavaScript</b></p>
     </div>
     <div class="form2">
-        <img src="../IMG/UNINTER.jpg" width="135px" height="135px">
+        <img src="UNINTER.jpg" width="135px" height="135px">
         <p>Atualmente estou cursando a graduação de ADS (Analise de desenvolvimento de software)
              na faculdade
             <b>UNINTER</b>.
