--- a/contato.html
+++ b/contato.html
@@ -10,10 +10,10 @@
     <!-- Menu do site -->
     <nav>
         <ul>
-                <li><a href="../Trabalho/index.html">Sobre mim</a></li>
-                <li><a href="../Trabalho/formacao.html">Formação</a></li>
-                <li><a href="../Trabalho/Portfolio.html">Portfólio</a></li>
-                <li><a href="../Trabalho/contato.html">Contato</a></li>          
+                <li><a href="index.html">Sobre mim</a></li>
+                <li><a href="formacao.html">Formação</a></li>
+                <li><a href="Portfolio.html">Portfólio</a></li>
+                <li><a href="contato.html">Contato</a></li>          
         </ul>
     </nav>
 
