--- a/Portfolio.html
+++ b/Portfolio.html
@@ -9,18 +9,18 @@
 <body>
     <nav>
         <ul>
-            <li><a href="../Trabalho/index.html">Sobre mim</a></li>
-            <li><a href="../Trabalho/formacao.html">Formação</a></li>
-            <li><a href="../Trabalho/Portfolio.html">Portfólio</a></li>
-            <li><a href="../Trabalho/contato.html">Contato</a></li>
+            <li><a href=".index.html">Sobre mim</a></li>
+            <li><a href=".formacao.html">Formação</a></li>
+            <li><a href="Portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
         </ul>
     </nav>
 </body>
 <!-- Imagens utilizada na página Portfolio-->
-<div class="img1"><img src="../IMG/thelastofus1.webp" width="300px" height="400px"></div>
+<div class="img1"><img src="thelastofus1.webp" width="300px" height="400px"></div>
 <div class="img3">
-    <img src="../IMG/perfil.jpeg" width="250px" height="350px">
+    <img src="perfil.jpeg" width="250px" height="350px">
     <p><b>Tenho 17 troféus de platina como uma conquista na playstation.</b></p>
 </div>
-<div class="img2"><img src="../IMG/thelastofus2.avif" width="300px" height="400px"></div>
+<div class="img2"><img src="thelastofus2.avif" width="300px" height="400px"></div>
 </html>
